<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResultActivity">

    <TextView
        android:id="@+id/labelBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_top"
        android:text="@string/bmi_label"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />


    <TextView
        android:id="@+id/resultBMI2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/bmi_result"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintEnd_toEndOf="@+id/labelBMI"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/labelBMI"
        app:layout_constraintTop_toBottomOf="@+id/labelBMI"
        tools:text="155" />

    <TextView
        android:id="@+id/resultInfoBMI"
        android:layout_width="@dimen/text_view_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/bmi_result_text"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultBMI2"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Result text" />

    <TextView
        android:id="@+id/descriptionBMI"
        android:layout_width="@dimen/description_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_space"
        android:text="@string/bmi_description"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@+id/resultInfoBMI"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/resultInfoBMI"
        app:layout_constraintTop_toBottomOf="@+id/resultInfoBMI"
        tools:text="Description" />


</androidx.constraintlayout.widget.ConstraintLayout>