<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthorActivity">

    <TextView
        android:id="@+id/aboutAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about_author"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <ImageView
        android:id="@+id/authorPhoto"
        android:layout_width="261dp"
        android:layout_height="258dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/author_photo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAuthor"
        app:srcCompat="@drawable/my_photo" />

    <Button
        android:id="@+id/buttonFacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_facts"
        app:layout_constraintEnd_toEndOf="@+id/factsLabel"
        app:layout_constraintStart_toStartOf="@+id/factsLabel"
        app:layout_constraintTop_toBottomOf="@+id/factsLabel" />

    <TextView
        android:id="@+id/factsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/facts_label"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/authorPhoto"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/authorPhoto"
        app:layout_constraintTop_toBottomOf="@+id/authorPhoto" />

    <TextView
        android:id="@+id/authorDescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textAlignment="center"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacts"
        tools:text="Facts" />
</androidx.constraintlayout.widget.ConstraintLayout>